--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 body {
   font-family: 'ArabicFont', sans-serif;
-  background: #0b1e3f;
+  background: #040811; /* داكن أكثر */
   color: white;
   margin: 0;
   padding: 20px;
@@ -32,7 +32,7 @@ body {
   height: 220px;
   margin: 20px auto;
   border-radius: 50%;
-  background: radial-gradient(circle, #00aaff, #004466);
+  background: transparent; /* بدون خلفية */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -42,20 +42,35 @@ body {
   color: #fff;
 }
 
-.circle::before {
+/* خطوط متحركة: خطين بلون مختلف */
+.circle::before, .circle::after {
   content: '';
   position: absolute;
   top: -5px; left: -5px; right: -5px; bottom: -5px;
   border-radius: 50%;
   border: 4px solid transparent;
-  border-top-color: #00ffff;
-  border-right-color: #00ffff;
-  animation: spin 2s linear infinite;
 }
 
-@keyframes spin {
+.circle::before {
+  border-top-color: #00ffff;
+  border-right-color: #00ffff;
+  animation: spin1 2s linear infinite;
+}
+
+.circle::after {
+  border-bottom-color: #ff00ff;
+  border-left-color: #ff00ff;
+  animation: spin2 3s linear infinite;
+}
+
+@keyframes spin1 {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
+}
+
+@keyframes spin2 {
+  0% { transform: rotate(360deg); }
+  100% { transform: rotate(0deg); }
 }
 
 .animate-change {
@@ -93,16 +108,17 @@ button {
   color: white;
   transition: transform 0.1s;
   font-family: 'ArabicFont', sans-serif;
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
 
-button:active {
-  transform: scale(0.95);
-}
+button:active { transform: scale(0.95); }
 
-.predict { background: #2ecc71; text-align: center; }
-.reset { background: #e74c3c; text-align: center; }
-.telegram { background: #3498db; width: 100%; font-weight: bold; font-size: 1.1em; display: flex; align-items: center; justify-content: flex-start; gap: 8px; }
-.promo { background: #333; width: 100%; font-weight: bold; font-size: 1.1em; display: flex; align-items: center; justify-content: flex-start; gap: 8px; }
+.predict { background: #2ecc71; text-align: center; justify-content: center; }
+.reset { background: #e74c3c; text-align: center; justify-content: center; }
+.telegram { background: #3498db; width: 100%; font-weight: bold; font-size: 1.1em; justify-content: flex-start; }
+.promo { background: #333; width: 100%; font-weight: bold; font-size: 1.1em; justify-content: flex-start; }
 
 .promo-section {
   display: flex;
@@ -130,20 +146,10 @@ button:active {
   font-size: 1.1em;
 }
 
-.alert-box.show {
-  opacity: 1;
-  transform: translateX(-50%) scale(1.05);
-}
+.alert-box.show { opacity: 1; transform: translateX(-50%) scale(1.05); }
+.alert-box.hide { opacity: 0; transform: translateX(-50%) scale(0.95); }
 
-.alert-box.hide {
-  opacity: 0;
-  transform: translateX(-50%) scale(0.95);
-}
-
-button img {
-  width: 24px;
-  height: 24px;
-}
+button img { width: 24px; height: 24px; }
 </style>
 </head>
 <body>
@@ -218,14 +224,11 @@ function generateAlert() {
   `;
   alertsContainer.appendChild(alertBox);
 
-  // نبض الدائرة عند ظهور الاشعار
   const multiplier = document.getElementById('multiplier');
   multiplier.classList.add('animate-change');
   setTimeout(()=> multiplier.classList.remove('animate-change'), 500);
 
-  // ظهور الاشعار
   setTimeout(()=> alertBox.classList.add('show'), 100);
-  // إخفاء بعد 5 ثواني
   setTimeout(()=>{
     alertBox.classList.remove('show');
     alertBox.classList.add('hide');
