--- a/index.html
+++ b/index.html
@@ -62,38 +62,17 @@ body {
   animation: spin2 3s linear infinite;
 }
 
-@keyframes spin1 {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-
-@keyframes spin2 {
-  0% { transform: rotate(360deg); }
-  100% { transform: rotate(0deg); }
-}
+@keyframes spin1 { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+@keyframes spin2 { 0% { transform: rotate(360deg); } 100% { transform: rotate(0deg); } }
 
 .animate-change {
   animation: flash 0.5s ease-in-out, pulse 0.5s ease-in-out;
 }
 
-@keyframes flash {
-  0% { transform: scale(1); color: #00ffff; }
-  50% { transform: scale(1.3); color: #fff200; }
-  100% { transform: scale(1); color: #ffffff; }
-}
+@keyframes flash { 0% { transform: scale(1); color: #00ffff; } 50% { transform: scale(1.3); color: #fff200; } 100% { transform: scale(1); color: #ffffff; } }
+@keyframes pulse { 0% { box-shadow: 0 0 0 rgba(0,255,255,0.7); } 50% { box-shadow: 0 0 20px rgba(0,255,255,0.7); } 100% { box-shadow: 0 0 0 rgba(0,255,255,0.7); } }
 
-@keyframes pulse {
-  0% { box-shadow: 0 0 0 rgba(0,255,255,0.7); }
-  50% { box-shadow: 0 0 20px rgba(0,255,255,0.7); }
-  100% { box-shadow: 0 0 0 rgba(0,255,255,0.7); }
-}
-
-.button-row {
-  display: flex;
-  justify-content: space-between;
-  gap: 10px;
-  margin: 10px 0;
-}
+.button-row { display: flex; justify-content: space-between; gap: 10px; margin: 10px 0; }
 
 button {
   flex: 1;
@@ -116,40 +95,21 @@ button:active { transform: scale(0.95); }
 
 .predict { background: #2ecc71; text-align: center; justify-content: center; }
 .reset { background: #e74c3c; text-align: center; justify-content: center; }
-.telegram { 
-  background: #3498db; 
-  width: 100%; 
-  font-weight: bold; 
-  font-size: 1.1em; 
-  justify-content: flex-start; 
-}
-.promo { 
-  background: #333; 
-  width: 100%; 
-  font-weight: bold; 
-  font-size: 1.1em; 
-  justify-content: flex-start; 
-}
+.telegram { background: #3498db; width: 100%; font-weight: bold; font-size: 1.1em; justify-content: flex-start; }
+.promo { background: #333; width: 100%; font-weight: bold; font-size: 1.1em; justify-content: flex-start; }
 
-.promo-section {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  justify-content: center;
-  align-items: center;
-  margin: 10px 0;
-}
+.promo-section { display: flex; flex-direction: column; gap: 10px; justify-content: center; align-items: center; margin: 10px 0; }
 
-/* مربع النص أسفل الأزرار وفوق الإعلانات */
+/* مربع النص أصغر */
 .info-box {
-  background: rgba(0,0,0,0.4);  /* شفاف */
-  border: 2px solid #888;       /* حواف رمادية */
+  background: rgba(0,0,0,0.4);
+  border: 2px solid #888;
   border-radius: 12px;
-  padding: 15px;
+  padding: 12px;
   margin-top: 10px;
   text-align: justify;
-  font-size: 1em;
-  line-height: 1.5em;
+  font-size: 0.9em; /* أصغر درجتين */
+  line-height: 1.4em;
   font-family: 'ArabicFont', sans-serif;
 }
 
@@ -194,7 +154,7 @@ button img { width: 24px; height: 24px; }
     <button class="promo" onclick="copyCode()"><img src="files.png" alt="copy"> الرمز الترويجي: EVO3</button>
   </div>
 
-  <!-- مربع النص الجديد -->
+  <!-- مربع النص أصغر -->
   <div class="info-box">
     تم تصميم هذه الأداة لتحليل لعبة Crash على تطبيقات XpariBet و1xbet باستخدام البروموكود EVO3 🎯💥، لمساعدة اللاعبين على فهم الأنماط المحتملة واتخاذ قرارات أذكى أثناء اللعب 📊🎮. يمكنك الآن الانضمام إلى قناة التيليجرام بالزر بالأعلى 🔗📲، حظًا موفقًا لك 🍀!
   </div>
@@ -247,7 +207,7 @@ function generateAlert() {
   const money = (Math.floor(Math.random() * 10000) + 450);
 
   alertBox.innerHTML = `
-    <strong>إشعار:</strong><br>
+    <strong>اشعار لعب:</strong><br>
     إيدي اللاعب: ${playerID}<br>
     الفرصة: X ${chance}<br>
     الأموال: ${money} EGP ✅
@@ -263,10 +223,10 @@ function generateAlert() {
     alertBox.classList.remove('show');
     alertBox.classList.add('hide');
     setTimeout(()=> alertsContainer.removeChild(alertBox), 500);
-  }, 12000); // الإعلان يظهر 12 ثانية
+  }, 12000);
 }
 
-setInterval(generateAlert, 12000); // يرسل إعلان جديد كل 12 ثانية
+setInterval(generateAlert, 12000);
 </script>
 
 </body>
