--- a/index.html
+++ b/index.html
@@ -1,297 +1,385 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8">
-<title>واجهة التوقع</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-@font-face {
-    font-family: 'ArabicFont';
-    src: url('arabic.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
+  <meta charset="UTF-8">
+  <title>واجهة التوقع</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    @font-face {
+      font-family: 'ArabicFont';
+      src: url('arabic.ttf') format('truetype');
+    }
 
-body {
-  font-family: 'ArabicFont', sans-serif;
-  background: #03050a;
-  color: white;
-  margin: 0;
-  padding: 20px;
-  text-align: center;
-  overflow-x: hidden;
-}
+    body {
+      font-family: 'ArabicFont', sans-serif;
+      background: #03060c;
+      color: white;
+      margin: 0;
+      padding: 20px;
+      text-align: center;
+    }
 
-.container {
-  max-width: 500px;
-  margin: auto;
-}
+    .container {
+      max-width: 400px;
+      margin: auto;
+      display: none; /* مخفي حتى المستخدم يؤكد الـ ID */
+    }
 
-.circle {
-  width: 160px;
-  height: 160px;
-  margin: 20px auto;
-  border-radius: 50%;
-  background: transparent;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 2em;
-  position: relative;
-  transition: all 0.3s ease-in-out;
-  color: #fff;
-}
+    /* الدائرة */
+    .circle-container {
+      position: relative;
+      width: 160px;
+      height: 160px;
+      margin: 20px auto;
+    }
 
-.circle::before, .circle::after {
-  content: '';
-  position: absolute;
-  top: -5px; left: -5px; right: -5px; bottom: -5px;
-  border-radius: 50%;
-  border: 4px solid transparent;
-}
+    .circle {
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.8em;
+      position: relative;
+      z-index: 2;
+    }
 
-.circle::before {
-  border-top-color: #00ffff;
-  border-right-color: #00ffff;
-  animation: spinClockwise 2s linear infinite;
-}
+    .ring {
+      position: absolute;
+      border: 3px solid transparent;
+      border-radius: 50%;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      box-sizing: border-box;
+      z-index: 1;
+    }
 
-.circle::after {
-  border-bottom-color: #ff00ff;
-  border-left-color: #ff00ff;
-  animation: spinCounter 4s linear infinite;
-}
+    .ring1 {
+      border-top: 3px solid #00aaff;
+      border-right: 3px solid #00aaff;
+      animation: spin 3s linear infinite;
+    }
 
-@keyframes spinClockwise {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
+    .ring2 {
+      border-bottom: 3px solid #ff00ff;
+      border-left: 3px solid #ff00ff;
+      animation: spinReverse 4s linear infinite;
+    }
 
-@keyframes spinCounter {
-  0% { transform: rotate(360deg); }
-  100% { transform: rotate(0deg); }
-}
+    @keyframes spin {
+      from { transform: rotate(0deg); }
+      to { transform: rotate(360deg); }
+    }
 
-.animate-change {
-  animation: flash 0.5s ease-in-out, pulse 0.5s ease-in-out;
-}
+    @keyframes spinReverse {
+      from { transform: rotate(0deg); }
+      to { transform: rotate(-360deg); }
+    }
 
-@keyframes flash { 
-  0% { transform: scale(1); color: #00ffff; } 
-  50% { transform: scale(1.3); color: #fff200; } 
-  100% { transform: scale(1); color: #ffffff; } 
-}
+    /* الأزرار */
+    .buttons {
+      display: flex;
+      justify-content: space-between;
+      gap: 10px;
+      margin-bottom: 10px;
+    }
 
-@keyframes pulse { 
-  0% { box-shadow: 0 0 0 rgba(0,255,255,0.7); } 
-  50% { box-shadow: 0 0 20px rgba(0,255,255,0.7); } 
-  100% { box-shadow: 0 0 0 rgba(0,255,255,0.7); } 
-}
+    button {
+      flex: 1;
+      padding: 12px;
+      font-size: 1em;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      color: white;
+      transition: transform 0.2s ease;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+    }
 
-.button-row { display: flex; justify-content: space-between; gap: 10px; margin: 10px 0; }
+    button:active {
+      transform: scale(0.95);
+    }
 
-button {
-  flex: 1;
-  padding: 14px;
-  font-size: 1em;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  position: relative;
-  z-index: 1;
-  color: white;
-  transition: transform 0.1s;
-  font-family: 'ArabicFont', sans-serif;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
+    .predict { background: #2ecc71; }
+    .reset { background: #e74c3c; }
+    .telegram, .promo { 
+      background: #1d6fb8;
+      width: 100%;
+      margin-top: 10px;
+    }
 
-button:active { transform: scale(0.95); }
+    .promo { background: #333; }
 
-.predict { background: #2ecc71; justify-content: center; }
-.reset { background: #e74c3c; justify-content: center; }
-.telegram { background: #3498db; width: 100%; font-weight: bold; font-size: 1.1em; justify-content: flex-start; }
-.promo { background: #333; width: 100%; font-weight: bold; font-size: 1.1em; justify-content: flex-start; }
+    .info-box {
+      margin: 15px 0;
+      padding: 10px;
+      border: 1px solid #555;
+      border-radius: 8px;
+      background: rgba(255, 255, 255, 0.05);
+      font-size: 0.8em;
+      line-height: 1.5em;
+    }
 
-.promo-section { display: flex; flex-direction: column; gap: 10px; justify-content: center; align-items: center; margin: 10px 0; }
+    /* الإشعارات */
+    #alerts {
+      position: fixed;
+      bottom: 15px;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+      z-index: 999;
+    }
 
-.info-box {
-  background: rgba(0,0,0,0.4);
-  border: 2px solid #888;
-  border-radius: 12px;
-  padding: 12px;
-  margin-top: 10px;
-  text-align: justify;
-  font-size: 0.9em;
-  line-height: 1.4em;
-  font-family: 'ArabicFont', sans-serif;
-}
+    .alert-box {
+      padding: 10px 15px;
+      border-radius: 10px;
+      border: 1px solid #777;
+      opacity: 0;
+      transform: translateY(30px);
+      transition: all 0.5s ease;
+      font-size: 0.9em;
+      min-width: 250px;
+      text-align: center;
+      box-shadow: 0 0 20px rgba(0,0,0,0);
+    }
 
-.alert-box {
-  position: fixed;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  background: rgba(0,0,0,0.85);
-  border: 2px solid #888;
-  padding: 15px 20px;
-  border-radius: 12px;
-  min-width: 280px;
-  transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
-  opacity: 0;
-  z-index: 999;
-  text-align: center;
-  font-family: 'ArabicFont', sans-serif;
-  font-size: 1.1em;
-}
+    .alert-box.show {
+      opacity: 1;
+      transform: translateY(0);
+    }
 
-.alert-box.show { opacity: 1; transform: translateX(-50%) scale(1.05); }
-.alert-box.hide { opacity: 0; transform: translateX(-50%) scale(0.95); }
+    .alert-box.hide {
+      opacity: 0;
+      transform: translateY(30px);
+      box-shadow: 0 0 20px rgba(0,0,0,0);
+    }
 
-.dialog-overlay {
-  position: fixed;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background: rgba(0,0,0,0.6);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
-}
+    /* ديالوج البروموكود */
+    .dialog {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) scale(0.8);
+      background: #0b2540;
+      border: 2px solid #555;
+      border-radius: 10px;
+      padding: 20px;
+      color: white;
+      text-align: center;
+      z-index: 1000;
+      opacity: 0;
+      transition: all 0.3s ease;
+    }
 
-.dialog-box {
-  background: #0a1a33;
-  border: 2px solid #888;
-  border-radius: 12px;
-  padding: 20px;
-  max-width: 300px;
-  text-align: center;
-  color: white;
-}
+    .dialog.show {
+      opacity: 1;
+      transform: translate(-50%, -50%) scale(1);
+      animation: bounceIn 0.3s ease;
+    }
 
-.dialog-box h2 { margin: 0 0 10px; color: #00ffff; }
-.dialog-box p { margin: 0 0 15px; }
-.dialog-box button {
-  background: #3498db;
-  padding: 10px;
-  border-radius: 8px;
-  width: 100%;
-  justify-content: center;
-}
+    @keyframes bounceIn {
+      0% { transform: translate(-50%, -50%) scale(0.7); }
+      50% { transform: translate(-50%, -50%) scale(1.05); }
+      100% { transform: translate(-50%, -50%) scale(1); }
+    }
 
-button img { width: 24px; height: 24px; }
-</style>
+    /* ديالوج البداية */
+    .start-dialog {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.8);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 2000;
+    }
+
+    .start-box {
+      background: #0b2540;
+      border: 2px solid #555;
+      border-radius: 10px;
+      padding: 20px;
+      width: 300px;
+      text-align: center;
+    }
+
+    .start-box h3 {
+      margin-bottom: 10px;
+    }
+
+    .start-box input {
+      width: 90%;
+      padding: 8px;
+      margin: 10px 0;
+      border-radius: 6px;
+      border: 1px solid #555;
+      text-align: center;
+      font-family: 'ArabicFont';
+    }
+
+    .radio-option {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      margin: 5px 0;
+    }
+
+    .radio-option img {
+      width: 20px;
+      height: 20px;
+    }
+
+    img.icon {
+      width: 18px;
+      height: 18px;
+    }
+  </style>
 </head>
 <body>
 
-<div class="container">
-  <div class="circle" id="multiplier">X0.00</div>
-
-  <div class="button-row">
-    <button class="predict" onclick="predict()">عرض التوقع</button>
-    <button class="reset" onclick="reset()">إعادة التعيين</button>
-  </div>
-
-  <div class="promo-section">
-    <a href="https://t.me/xbet_mux" target="_blank">
-      <button class="telegram"><img src="telegram.png" alt="telegram"> انضم للقناة</button>
-    </a>
-    <button class="promo" onclick="copyCode()"><img src="files.png" alt="copy"> الرمز الترويجي: EVO3</button>
-  </div>
-
-  <div class="info-box">
-    تم تصميم هذه الأداة لتحليل لعبة Crash على تطبيقات XpariBet و1xbet باستخدام البروموكود EVO3 🎯💥، لمساعدة اللاعبين على فهم الأنماط المحتملة واتخاذ قرارات أذكى أثناء اللعب 📊🎮. يمكنك الآن الانضمام إلى قناة التيليجرام بالزر بالأعلى 🔗📲، حظًا موفقًا لك 🍀!
-  </div>
-
-  <div id="alerts"></div>
-</div>
-
-<script>
-function animateNumber(element, start, end, duration) {
-  let startTime = null;
-  function step(currentTime) {
-    if (!startTime) startTime = currentTime;
-    const progress = Math.min((currentTime - startTime) / duration, 1);
-    const value = (start + (end - start) * progress).toFixed(2);
-    element.textContent = `X${value}`;
-    if (progress < 1) requestAnimationFrame(step);
-  }
-  requestAnimationFrame(step);
-}
-
-function predict() {
-  const randomChance = Math.random();
-  let random;
-  if (randomChance < 0.25) {
-    random = Math.random() * (15.99 - 8.00) + 8.00; // 25٪ فوق 8
-  } else {
-    random = Math.random() * (7.99 - 2.00) + 2.00; // 75٪ تحت 8
-  }
-
-  const multiplier = document.getElementById('multiplier');
-  const current = parseFloat(multiplier.textContent.replace('X','')) || 0;
-  animateNumber(multiplier, current, random, 500);
-  multiplier.classList.add('animate-change');
-  setTimeout(()=> multiplier.classList.remove('animate-change'), 500);
-}
-
-function reset() {
-  const multiplier = document.getElementById('multiplier');
-  const current = parseFloat(multiplier.textContent.replace('X','')) || 0;
-  animateNumber(multiplier, current, 0, 500);
-  multiplier.classList.add('animate-change');
-  setTimeout(()=> multiplier.classList.remove('animate-change'), 500);
-}
-
-function copyCode() {
-  navigator.clipboard.writeText('EVO3');
-  
-  const overlay = document.createElement('div');
-  overlay.className = 'dialog-overlay';
-
-  overlay.innerHTML = `
-    <div class="dialog-box">
-      <h2>نجاح</h2>
-      <p>تم نسخ البروموكود!</p>
-      <button onclick="document.body.removeChild(this.parentNode.parentNode)">حسنا</button>
+  <!-- ديالوج البداية -->
+  <div class="start-dialog" id="startDialog">
+    <div class="start-box">
+      <h3>أدخل معلوماتك</h3>
+      <input type="number" id="playerIdInput" placeholder="أدخل الـ ID (10 أرقام)">
+      <div class="radio-option">
+        <input type="radio" name="platform" value="1xbet">
+        <img src="imag1.png">
+        <span>1XBET</span>
+      </div>
+      <div class="radio-option">
+        <input type="radio" name="platform" value="xparibet" checked>
+        <img src="imag2.png">
+        <span>XpariBet (موصى به)</span>
+      </div>
+      <button style="background:#1d6fb8; margin-top:10px;" onclick="confirmStart()">تأكيد</button>
     </div>
-  `;
-  
-  document.body.appendChild(overlay);
-}
+  </div>
 
-function generateAlert() {
-  const alertsContainer = document.getElementById('alerts');
-  const alertBox = document.createElement('div');
-  alertBox.className = 'alert-box';
+  <div class="container">
+    <!-- الدائرة -->
+    <div class="circle-container">
+      <div class="ring ring1"></div>
+      <div class="ring ring2"></div>
+      <div class="circle" id="multiplier">X0.00</div>
+    </div>
 
-  const playerID = '1' + Math.floor(Math.random() * 9000000000);
-  const chance = (Math.random() * (15.99 - 2.00) + 2.00).toFixed(2);
-  const money = (Math.floor(Math.random() * 10000) + 450);
+    <!-- الأزرار -->
+    <div class="buttons">
+      <button class="predict" onclick="predict()">عرض التوقع</button>
+      <button class="reset" onclick="reset()">إعادة تعيين</button>
+    </div>
 
-  alertBox.innerHTML = `
-    <strong>اشعار لعب:</strong><br>
-    إيدي اللاعب: ${playerID}<br>
-    الفرصة: X ${chance}<br>
-    الأموال: ${money} EGP ✅
-  `;
-  alertsContainer.appendChild(alertBox);
+    <!-- زر القناة -->
+    <button class="telegram">
+      <img src="telegram.png" class="icon">
+      انضم للقناة
+    </button>
 
-  const multiplier = document.getElementById('multiplier');
-  multiplier.classList.add('animate-change');
-  setTimeout(()=> multiplier.classList.remove('animate-change'), 500);
+    <!-- زر البروموكود -->
+    <button class="promo" onclick="copyCode()">
+      <img src="files.png" class="icon">
+      الرمز الترويجي: EVO3
+    </button>
 
-  setTimeout(()=> alertBox.classList.add('show'), 100);
-  setTimeout(()=>{
-    alertBox.classList.remove('show');
-    alertBox.classList.add('hide');
-    setTimeout(()=> alertsContainer.removeChild(alertBox), 500);
-  }, 12000);
-}
+    <!-- مربع المعلومات -->
+    <div class="info-box">
+      تم تصميم هذه الأداة لتحليل لعبة Crash على تطبيقات XpariBet و1xbet باستخدام البروموكود EVO3 🎯💥، لمساعدة اللاعبين على فهم الأنماط المحتملة واتخاذ قرارات أذكى أثناء اللعب 📊🎮. يمكنك الآن الانضمام إلى قناة التيليجرام بالزر بالأعلى 🔗📲، حظًا موفقًا لك 🍀!
+    </div>
+  </div>
 
-setInterval(generateAlert, 12000);
-</script>
+  <!-- الإشعارات -->
+  <div id="alerts"></div>
+
+  <!-- ديالوج البروموكود -->
+  <div class="dialog" id="dialog">
+    <h3>نجاح ✅</h3>
+    <p>تم نسخ البروموكود!</p>
+    <button onclick="closeDialog()">حسنا</button>
+  </div>
+
+  <!-- صوت تنبيه -->
+  <audio id="alertSound" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg" preload="auto"></audio>
+
+  <script>
+    function confirmStart() {
+      const playerId = document.getElementById('playerIdInput').value;
+      if (/^1\d{9}$/.test(playerId)) {
+        document.getElementById('startDialog').style.display = 'none';
+        document.querySelector('.container').style.display = 'block';
+      } else {
+        alert('⚠️ الرجاء إدخال ID صحيح مكون من 10 أرقام ويبدأ بـ 1');
+      }
+    }
+
+    function predict() {
+      let random;
+      if (Math.random() < 0.25) {
+        random = (Math.random() * (15.99 - 8.00) + 8.00).toFixed(2);
+      } else {
+        random = (Math.random() * (7.99 - 2.00) + 2.00).toFixed(2);
+      }
+      const multiplier = document.getElementById('multiplier');
+      multiplier.textContent = `X${random}`;
+    }
+
+    function reset() {
+      document.getElementById('multiplier').textContent = 'X0.00';
+    }
+
+    function copyCode() {
+      navigator.clipboard.writeText('EVO3');
+      document.getElementById('dialog').classList.add('show');
+    }
+
+    function closeDialog() {
+      document.getElementById('dialog').classList.remove('show');
+    }
+
+    function generateAlert() {
+      const alertsContainer = document.getElementById('alerts');
+      const alertBox = document.createElement('div');
+      alertBox.className = 'alert-box';
+
+      const playerID = '1' + Math.floor(Math.random() * 9000000000);
+      const chance = (Math.random() * (15.99 - 2.00) + 2.00).toFixed(2);
+      const money = (Math.floor(Math.random() * 10000) + 450);
+
+      const colors = ["#2ecc71", "#3498db", "#9b59b6", "#e67e22"];
+      const randomColor = colors[Math.floor(Math.random() * colors.length)];
+      alertBox.style.background = randomColor;
+      alertBox.style.boxShadow = `0 0 20px ${randomColor}aa`;
+
+      alertBox.innerHTML = `
+        <strong>اشعار لعب:</strong><br>
+        إيدي اللاعب: ${playerID}<br>
+        الفرصة: X ${chance}<br>
+        الأموال: ${money} EGP ✅
+      `;
+
+      alertsContainer.appendChild(alertBox);
+      document.getElementById('alertSound').play();
+
+      setTimeout(() => alertBox.classList.add('show'), 100);
+      setTimeout(() => {
+        alertBox.classList.remove('show');
+        alertBox.classList.add('hide');
+        setTimeout(() => alertsContainer.removeChild(alertBox), 500);
+      }, 12000);
+    }
+
+    setInterval(generateAlert, 12000);
+  </script>
 
 </body>
 </html>
